# enhanced-search

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
src/enhanced_search/: configuration.py  errors.py  factories.py  utils.py
src/enhanced_search/annotation/: __init__.py  utils.py
src/enhanced_search/annotation/analyzers/: __init__.py  patterns.py
src/enhanced_search/annotation/query/: engines.py  processors.py
src/enhanced_search/annotation/text/: __init__.py  data.py  engines.py  interface.py  keyword_annotator.py  utils.py
src/enhanced_search/annotation/text/dependencies/: patterns.py
src/enhanced_search/annotation/text/engines/: __init__.py  dependencies.py  disambiguation.py  entity_linking.py  language.py  lemmatizer.py  literals.py  named_entity_recognition.py  tokenizer.py  uri_linking.py
src/enhanced_search/databases/: __init__.py  documents.py  graph.py  interface.py  key_value.py
src/enhanced_search/generators/: __init__.py  solr.py
src/enhanced_search/html/: __init__.py  query_generation.py  sanitzation.py
tests/: __init__.py  conftest.py  dummies.py
tests/enhanced_search/annotation/query/: test_SemanticQueryProcessor.py  test_SparqlQueryGenerator.py
tests/enhanced_search/annotation/text/: test_DisambiguationAnnotationEngine.py  test_Keyword_Annotator.py  test_LanguageDetector.py  test_LiteralAnnotationEngine.py  test_PatternDependencyAnnotationEngine.py  test_SimpleLemmatizer.py  test_SimpleTokenizer.py  test_StringBasedNamedEntityAnnotatorEngine.py  test_TextAnnotator.py  test_UriLinkerAnnotatorEngine.py
tests/enhanced_search/databases/: test_RedisDatabase.py  test_SolrDatabase.py
tests/enhanced_search/factories/: test_TextAnnotatorFactory.py
tests/enhanced_search/generators/: test_SolrQueryGenerator.py
tests/enhanced_search/html/: test_query_generation.py  test_sanitization.py
tests/resources/http/: solr.toml
tests/resources/rdf/: default.nt
