[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-search"
description = "A library to orchestrate the BIOfid semantic search"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPLv3"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "OSI Approved :: GNU Affero General Public License v3"
]
dependencies = [
    "pysolr==3.9.0",
    "redis==4.4.1",
    "simplemma==0.9.0",
    "solrq==1.1.2",
    "SPARQL-Burger==1.0.2",
    "SPARQLWrapper==2.0.0",
]
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    # Testing
    "tox",
    "pytest>=7.0",
    "pytest-cov",

    # Linters
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",

    # Security
    "safety",
    "bandit",

    # Testing Dependencies
    "rdflib",
    "fakeredis",
    "responses"
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ["enhanced_search"]
omit = ["tests/*"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true

[tool.pylint]
ignore-patterns = "test_.*?py"
disable = ["W0621", "R0903", "C0208", "W0108", "R0913"]
good-names = [
    "db",
    "id",
    "f"
]

[tool.isort]
profile = "black"
